Impressum gap fix

--- a/Impressum.css
+++ b/Impressum.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 500px;
+  min-height: 800px;
   color: blue;
 }
 
